[gd_scene load_steps=13 format=3 uid="uid://djbmr12dp2514"]

[ext_resource type="Script" uid="uid://bkkis53vqxipq" path="res://scipts/Camioneta.gd" id="1_16xa3"]
[ext_resource type="Script" uid="uid://cgfvxv3t4trbr" path="res://vehicles/spring_arm_3d.gd" id="2_p08t7"]
[ext_resource type="Script" uid="uid://58ogetcrcafn" path="res://vehicles/canvas_layer.gd" id="3_kbp7b"]
[ext_resource type="Texture2D" uid="uid://cskw882fffi36" path="res://addons/grappling_hook_3d/example/hook_availible.png" id="4_us0fi"]
[ext_resource type="Script" uid="uid://68aq3chbg44i" path="res://addons/grappling_hook_3d/src/hook_controller.gd" id="5_em7pa"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fmq2h"]
height = 0.2479248

[sub_resource type="CylinderMesh" id="CylinderMesh_26rbd"]

[sub_resource type="BoxMesh" id="BoxMesh_k6b5c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_atooj"]
size = Vector3(1, 1.0208893, 1.989685)

[sub_resource type="BoxMesh" id="BoxMesh_4yxys"]
size = Vector3(0.2, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_06fie"]
albedo_color = Color(0.396078, 0.396078, 0.396078, 1)
metallic = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_lkke1"]

[node name="grua" type="VehicleBody3D"]
mass = 3500.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.5, 0)
script = ExtResource("1_16xa3")

[node name="VehicleWheel3D" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0, 1)
use_as_steering = true
suspension_stiffness = 30.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="VehicleWheel3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0.035705566, 0)
shape = SubResource("CylinderShape3D_fmq2h")

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleWheel3D"]
transform = Transform3D(-4.371139e-08, -0.11, 0, 1, -4.808253e-09, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_26rbd")

[node name="VehicleWheel3D2" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0, 1)
use_as_steering = true
suspension_stiffness = 30.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="VehicleWheel3D2"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0.035705566, 0)
shape = SubResource("CylinderShape3D_fmq2h")

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleWheel3D2"]
transform = Transform3D(-4.371139e-08, -0.11, 0, 1, -4.808253e-09, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_26rbd")

[node name="Trasera" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.75, 0, -1)
suspension_stiffness = 30.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Trasera"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0.035705566, 0)
shape = SubResource("CylinderShape3D_fmq2h")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Trasera"]
transform = Transform3D(-4.371139e-08, -0.11, 0, 1, -4.808253e-09, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_26rbd")

[node name="Trasera2" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0, -1)
suspension_stiffness = 30.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Trasera2"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0.035705566, 0)
shape = SubResource("CylinderShape3D_fmq2h")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Trasera2"]
transform = Transform3D(-4.371139e-08, -0.11, 0, 1, -4.808253e-09, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_26rbd")

[node name="CuerpoCamioneta" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0.3725592, 0)
mesh = SubResource("BoxMesh_k6b5c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.375466, -0.008636475)
shape = SubResource("BoxShape3D_atooj")

[node name="QuintaRueda" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45263755, -1.0852237)

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 1.0279348, 0)
script = ExtResource("2_p08t7")

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]

[node name="Hook Raycast" type="RayCast3D" parent="SpringArm3D/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.0008532e-07, -0.73547107, -1.1448426)
target_position = Vector3(0, 0, -25)

[node name="HUD" type="CanvasLayer" parent="." groups=["hud"]]
script = ExtResource("3_kbp7b")

[node name="Consola" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="PanelInstrumentos" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_left = 976.0
offset_top = 512.0
offset_right = 1016.0
offset_bottom = 552.0
metadata/_edit_use_anchors_ = true

[node name="Velocimetro" type="Label" parent="HUD/PanelInstrumentos"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="Indicador4x4" type="Label" parent="HUD/PanelInstrumentos"]
layout_mode = 0
offset_left = -2.0
offset_top = 45.0
offset_right = 38.0
offset_bottom = 68.0
metadata/_edit_use_anchors_ = true

[node name="CombustibleBar" type="ProgressBar" parent="HUD/PanelInstrumentos"]
layout_mode = 0
offset_left = 12.0
offset_top = -50.0
offset_right = 16.0
offset_bottom = -23.0
metadata/_edit_use_anchors_ = true

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_us0fi")
metadata/_edit_use_anchors_ = true

[node name="MarkerFrontal" type="Marker3D" parent="."]

[node name="HookController" type="Node" parent="." node_paths=PackedStringArray("hook_raycast", "player_body", "hook_source")]
script = ExtResource("5_em7pa")
hook_raycast = NodePath("../SpringArm3D/Camera3D/Hook Raycast")
player_body = NodePath("..")
launch_action_name = "click_izquierdo"
retract_action_name = "click_izquierdo 2"
hook_source = NodePath("../Gear0/HookRopeStart")
metadata/_custom_type_script = "uid://68aq3chbg44i"

[node name="Gear0" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0.5, 0.588954, 0.183007)
mesh = SubResource("BoxMesh_4yxys")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_06fie")

[node name="HookRopeStart" type="Marker3D" parent="Gear0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.916718, 0)
mesh = SubResource("CylinderMesh_lkke1")
